optimize css & changePassword dialog

--- a/src/renderer/src/styles/element.scss
+++ b/src/renderer/src/styles/element.scss
@@ -1,29 +1,4 @@
-@forward 'element-plus/theme-chalk/src/common/var.scss' with (
-  $colors: (
-    'white': #ffffff,
-    'black': #000000,
-    'primary': (
-      'base': #3a81fc
-    ),
-    'success': (
-      'base': #65be31
-    ),
-    'warning': (
-      'base': #f39728
-    ),
-    'danger': (
-      'base': #dc4945
-    ),
-    'error': (
-      'base': #dc4945
-    ),
-    'info': (
-      'base': #909399
-    )
-  )
-);
-
-$header-height: 80px;
+$header-height: 60px;
 .el-button {
   font-weight: normal;
   &--primary {
@@ -38,7 +13,7 @@ $header-height: 80px;
 }
 
 .el-header {
-  --el-header-height: 80px;
+  --el-header-height: 60px;
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -51,7 +26,7 @@ $header-height: 80px;
   height: calc(100vh - $header-height);
 }
 .el-main {
-  --el-main-padding: 0;
+  --el-main-padding: 20px;
   height: calc(100vh - $header-height);
   background-color: #f1f2f6;
 }
@@ -61,7 +36,6 @@ $header-height: 80px;
 }
 
 .el-menu {
-  border-color: #ededed;
   --el-menu-border-color: transparent;
   .el-menu-item {
     --el-menu-hover-bg-color: #f5f7fa;
@@ -109,8 +83,11 @@ input::-webkit-inner-spin-button {
 .el-table {
   height: 100%;
   --el-table-header-text-color: #333333;
-  .el-table__header .el-table__cell {
+  &__header &__cell {
     background-color: #f5f7fa !important;
+  }
+  &__inner-wrapper::before {
+    display: none;
   }
 }
 
